@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+include/config.h: fix default emergency path/coordinates.
+Nicolas Weeger 2007-08-05
+
 Merge NewServerCommands to ServerCommands, remove unused SocketCommands declaration.
  include/commands.h
  server/c_new.c commands.c
